# gen-ai-pro

./: .editorconfig  .gitignore  00-AIP-C01-Study-Strategy.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  ENGINEERING-STANDARD.md  LICENSE  Makefile  README.md  SECURITY.md  VERIFICATION-LOG.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  content-error.yml
.github/workflows/: ci.yml  consistency.yml  deploy-backend.yml  deploy-frontend.yml  deploy-telegram.yml  (+2 more)
AIP-C01-Format-Drills/: Ordering-Matching-Drills.md
AIP-C01-Mock-Exam-1/: AIP-C01-Mock-Exam-1_AnswerSheet.md  README.md
AIP-C01-Mock-Exam-2/: AIP-C01-Mock-Exam-2_AnswerSheet.md  README.md
_cram/: STUDY-AIDS-INDEX.md  cram-d1.md  cram-d3.md  cram-d4.md  cram-d5.md
_notebooklm/: HOW-TO-STUDY-WITH-NOTEBOOKLM.md  README.md
agents/: README.md  common.py  exam_bank.py  repo_map.py  requirements.txt  socratic_tutor.py  verifier.py
guides/: 01-Foundation-Models-Bedrock-Core.md  02-RAG-Vector-Stores-Knowledge-Bases.md  03-AI-Safety-Security-Governance.md  04-Agentic-AI-Agents-AgentCore-Strands-MCP.md  05-Prompt-Engineering-Management.md  06-Testing-Evaluation-Troubleshooting.md  07-Cost-Performance-Monitoring.md  08-Enterprise-Integration-Deployment.md
templates/: AIP-C01_Performance-Analysis-Template.md
tests/: conftest.py  test_app_core.py  test_consistency_check.py  test_sync_corpus.py  test_telegram_core.py
tools/: consistency_check.py
website/: CICD-SPEC.md  FEASIBILITY.md  README.md  TELEGRAM-SPEC.md
(+78 files in other folders)
