[project]
name = "gen-ai-pro"
version = "1.0.0"
description = "AIP-C01 study platform: audited content, local study agents, and a RAG chat site"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["website/frontend"]

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I isort, UP pyupgrade, B bugbear, SIM simplify,
# D pydocstyle (Google convention — see [tool.ruff.lint.pydocstyle])
select = ["E", "W", "F", "I", "UP", "B", "SIM", "D"]
ignore = [
  "E501", # line length enforced by the formatter where it matters
  "D105", # magic-method docstrings add nothing
  "D107", # __init__ documented at the class level
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# The smoke test intentionally stubs modules before importing the app,
# so import order there is semantic, not cosmetic.
"website/backend/test_smoke.py" = ["E402", "I001", "D"]
# Test names are the documentation; docstring-per-test is noise.
"tests/*" = ["D1"]

[tool.ruff.format]
quote-style = "double"
